# het68

./: 2350_USB.md  BUILDING.md  CMakeLists.txt  CMakeLists.txt.bak  Makefile  README.md  TDM8.txt  archive.sh  build.sh  cmake_install.cmake  diag.sh  evilfix.sh  lsusb_output.txt  main.c  main.c.old  setenv.sh  tusb_config.h  upload.sh  usb_descriptors.c  usb_descriptors.c.old  usb_descriptors.c_2  wiring_and_bom.md
picotool/src/picotoolBuild-stamp/: picotoolBuild-source_dirinfo.txt
picotool/tmp/: picotoolBuild-cfgcmd.txt  picotoolBuild-mkdirs.cmake
pio/: CMakeLists.txt  i2s_rx.pio
